refactor(entity): replace manual getters and setters with Lombok annotations
- Annotated entities with `@Getter` and `@Setter` to simplify code and remove boilerplate.
- Updated references to use `getId()` and `setId()` directly where applicable.
- Ensured compatibility and consistency across all affected classes.